--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce
-spring.datasource.username=root
-spring.datasource.password=0000282002
+# Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3308/mydatabase
+spring.datasource.username=myuser
+spring.datasource.password=userpass
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql= true
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+# Hibernate Properties
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
